--- a/src/components/content/mdx-image.astro
+++ b/src/components/content/mdx-image.astro
@@ -2,25 +2,24 @@
 import { cn } from "@/lib/utils";
 
 import { Image } from "astro:assets";
-import type { HTMLAttributes } from "astro/types";
 
 interface Props {
-  src: string;
-  alt: string;
-  width: number;
-  height: number;
-  className?: string;
+    src: string;
+    alt: string;
+    width: number;
+    height: number;
+    className?: string;
 }
-const { src, alt, className, height, width, ...attrs } = Astro.props;
+const { src, alt, className, height, width } = Astro.props;
 ---
 
 <Image
-  class:list={cn(
-    "w-full h-full object-cover rounded-md overflow-hidden border",
-    className
-  )}
-  width={width}
-  height={height}
-  src={src}
-  alt={alt}
+    class:list={cn(
+        "w-full h-full object-cover rounded-md overflow-hidden border",
+        className,
+    )}
+    width={width}
+    height={height}
+    src={src}
+    alt={alt}
 />
